
2005-07-03  Florian Boor  <florian@kernelconcepts.de>

	* Makefile.translation: Add missing \.

2005-07-01  Florian Boor  <florian@kernelconcepts.de>

	* Makefile.translation: Make some tasks depend on ENABLE_NLS to
                                avoid trouble if NLS tools are not installed.

2005-04-07  Luc Pionchon  <luc@handhelds.org>

	* po-wget-last: python script to wget freshest .po from TP for a given package.
	* po-extract-linguas: renamed from extract-linguas
	* Makefile.translation-auto-linguas: use po-wget-last and po-extract-linguas.
	NOTE: the feature is here, but it is far to be efficient.
	      postats (~1Mb) is read 2 times for each package.

2005-02-28  Philip Blundell  <philb@gnu.org>

	* Makefile.dpkg_ipkg (dist): Undo last change.  Patch LINGUAS into
	shipped Makefile in place of auto-linguas code.  Force DEBUG=no.
	
2005-02-28  Philip Blundell  <philb@gnu.org>

	* Makefile.dpkg_ipkg (dist): Also install
	Makefile.translation-auto-linguas.	

2004-11-18  Phil Blundell  <philb@gnu.org>

	* Makefile.dpkg_ipkg (check-source): Check for existence of
	control file, not just familiar/ directory.

2004-03-13  Philip Blundell  <philb@gnu.org>

	* Makefile.dpkg_ipkg (dist): Don't exclude *.d.

2004-03-07  Philip Blundell  <philb@gnu.org>

	* Makefile.translation (clean-dist-translation): Remove temporary
	files.
	(clean): Also depend on clean-dist-translation.

	* Makefile.dpkg_ipkg (clean-dist): Remove familiar/dist and
	familiar/dist.list.
	(clean): Also depend on clean-dist.
	(ipkg): Clean away familiar/dist and familiar/dist.list after
	packaging.

	* Makefile.translation (real-translation-package): Pass "-g 0 -o 0"
	to ipkg-build.  Remove chown command.

	* Makefile.dpkg_ipkg (LDFLAGS): Put debug/optimisation stuff in
	CFLAGS/LDFLAGS, not STANDARD_CFLAGS/STANDARD_LDFLAGS.
	(.c.o): New rule.  Use $(PACKAGE_CFLAGS) and $(PACKAGE_CPPFLAGS).

2004-02-22  Luc Pionchon <luc@handhelds.org>
