@@ -1,6 +1,6 @@
 CVSTAG := $(shell echo $(PACKAGE)-$(VERSION) | tr [a-z.] [A-Z_])
 
-dist-upload: dist
+dist-upload: distcheck
 	scp $(PACKAGE)-$(VERSION).tar.bz2 $(USER)@handhelds.org:/home/ftp/projects/gpe/source/
 
 tag:
