@@ -1,3 +1,6 @@
+2005-09-11  Phil Blundell  <philb@gnu.org>
+
+	* gpe-dist.am (dist-upload): Use distcheck.
 
 2005-07-03  Florian Boor  <florian@kernelconcepts.de>
 
